fix: hide navbar buttons on small screens

--- a/src/components/MainSearchBar/MainSearchBar.module.scss
+++ b/src/components/MainSearchBar/MainSearchBar.module.scss
@@ -1,6 +1,6 @@
 .search {
   flex-grow: 1;
-  max-width: 50vw;
+  max-width: 35rem;
 
   input {
     background-color: #f1f3f4;
