--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -28,8 +28,23 @@
 
 .right {
   margin-left: auto;
+  flex-shrink: 0;
+
   button {
     margin-right: 0;
     margin-left: 1rem;
+  }
+
+  @media (max-width: 650px) {
+    a:last-of-type {
+      display: none !important;
+    }
+    margin-left: 0;
+  }
+
+  @media (max-width: 500px) {
+    a {
+      display: none !important;
+    }
   }
 }
